--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Esse site é um presente para você: <strong>Feliz Aniversário!!</strong></h1>
+            <h1 class="apresentacao__conteudo__titulo">Esse site é um presente para você: <br><br> <strong>Feliz Aniversário!</strong></h1>
             <img class="apresentacao__conteudo__imagem" src="./assets/image 11 (1).png" alt="Imagem do Aniversariante">
         </section>
     </main>
